front.web/deployment.rdb.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: rdb
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: rdb
    spec:
      containers:
      - image: docker.io/postgres
        name: rdb
