front.web/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: front.web
spec:
  containers:
    - image: gcr.io/po2r-193708/front.web:0.1.0-SNAPSHOT
      imagePullPolicy: Always
      name: front.web
