front.web/service.kvs.yml
apiVersion: v1
kind: Service
metadata:
  name: kvs
spec:
  type: ClusterIP
  selector:
    name: kvs
  ports:
  - port: 6379
    targetPort: 6379
