front.web/ingress.front.web.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-web
spec:
  backend:
    serviceName: front-web
    servicePort: 3000
